{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 22,
  "lineage": "7f51271b-8e9f-69c8-a835-31eb2cf493e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_jenkins_server_karachira",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b5a531c0da96276",
            "arn": "arn:aws:ec2:eu-west-3:490714423364:instance/i-002a8e75c774018bc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002a8e75c774018bc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-033d56a158b3bffb7",
            "private_dns": "ip-172-31-12-25.eu-west-3.compute.internal",
            "private_ip": "172.31.12.25",
            "public_dns": "ec2-15-236-201-15.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.201.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ddf7992b33690bf4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-5b9bd732",
            "tags": {
              "Name": "instance_jenkins_server_clara"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-93f38df8"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_jenkins_jenkins_karachira",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490714423364:security-group/sg-0e605140d9bea133a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e605140d9bea133a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "security_group_jenkins_jenkins_karachira",
            "name_prefix": "",
            "owner_id": "490714423364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group_jenkins_jenkins_karachira"
            },
            "timeouts": null,
            "vpc_id": "vpc-891839e0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_jenkins_ssh_karachira",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490714423364:security-group/sg-076c90b7a56086d7d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076c90b7a56086d7d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security_group_jenkins_ssh_karachira",
            "name_prefix": "",
            "owner_id": "490714423364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group_jenkins_ssh_karachira"
            },
            "timeouts": null,
            "vpc_id": "vpc-891839e0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_jenkins_web_karachira",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:490714423364:security-group/sg-00516b7a296dd18f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00516b7a296dd18f4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security_group_jenkins_web_karachira",
            "name_prefix": "",
            "owner_id": "490714423364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group_jenkins_web_karachira"
            },
            "timeouts": null,
            "vpc_id": "vpc-891839e0"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}